tests/ui/forin.gopp
package main

// for-in at runtime: error paths.

func main() {
    n := 5
    for x in n { //~ ERROR cannot range over int (need slice, map, or chan)
        println(x)
    }
    ch := chan<int>(1)
    for i, v in ch { //~ ERROR ranging over chan<int> yields values only (no index/key)
        println(i, v)
    }
    xs := [string]{"a"}
    for s in xs {
        bad := s + 1 //~ ERROR invalid operation: string + untyped int (mismatched types)
        _ = bad
    }
}
